import { SystemRequestCacheEntityBase } from '@/generated/entities/system-request-cache';

export class SystemRequestCacheEntity extends SystemRequestCacheEntityBase {}
