import { SystemScheduledJobEntityBase } from '@/generated/entities/system-scheduled-job';

export class SystemScheduledJobEntity extends SystemScheduledJobEntityBase {}
