//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table NextauthAccount {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table NextauthSession {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table NextauthVerificationToken {
  identifier String [not null]
  token String [not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table SystemRequestCache {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  completedAt DateTime
  request Json
  response Json
}

Table SystemScheduledJob {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  runsAt DateTime [not null]
  completedAt DateTime
  type String [not null]
  data Json [not null]
  executions Json [not null, default: '[]']
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  email String [unique, not null]
  emailVerified DateTime
  imageUrl String
  isAdmin Boolean [not null, default: false]
  nextauthAccounts NextauthAccount [not null]
  nextauthSessions NextauthSession [not null]
  books Book [not null]
  userBooks UserBook [not null]
  userCharacters UserCharacter [not null]
  userQuizzes UserQuiz [not null]
  userQuizCharacters UserQuizCharacter [not null]
}

Ref: NextauthAccount.userId > User.id [delete: Cascade]

Ref: NextauthSession.userId > User.id [delete: Cascade]
